# RustMailer

./: .env  Cargo.toml  configuration.yaml  db_setup_script.sh  docker_setup_vm.sh  readme.md  request.http
.github/workflows/: rust.yml  rustmailer-ci.yml
migrations/: 20251222115509_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
