[package]
name = "rustmailer"
version = "0.1.0"
authors = ["Sahil Pant <sahilpant16@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustmailer"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.22"

