[package]
name = "rustmailer"
version = "0.1.0"
authors = ["Sahil Pant <sahilpant16@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustmailer"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15.19"
file = "0.1.1"
fixed = "1.29.0"
github-actions = "0.0.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid =  { version = "1.19.0", features = ["v4"] }

[dependencies.sqlx]
version="0.8.6"
default-features=false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.26"

